[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/main_menu/title.png" type="Texture" id=1]
[ext_resource path="res://LevelMenu.gd" type="Script" id=3]

[node name="LevelMenu" type="MarginContainer"]
margin_right = 1366.0
margin_bottom = 768.0
rect_scale = Vector2( 0.35, 0.35 )
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1246.0
margin_bottom = 688.0
mouse_filter = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 294.0
margin_right = 831.0
margin_bottom = 608.0

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 537.0
margin_bottom = 118.0
texture = ExtResource( 1 )
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 537.0
margin_bottom = 608.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Level" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 537.0
margin_bottom = 228.0
stretch_mode = 3

[node name="Level1" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer/Level"]
margin_left = 231.714
margin_top = -118.571
margin_right = 300.714
margin_bottom = -98.5714
text = "Level 1"

[node name="Level2" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer/Level"]
margin_left = 231.714
margin_top = -70.5714
margin_right = 300.714
margin_bottom = -50.5714
text = "Level 2"

[node name="Level3" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer/Level"]
margin_left = 231.714
margin_top = -22.5714
margin_right = 300.714
margin_bottom = -1.57141
text = "Level 3"

[node name="Schließen" type="TextureRect" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 537.0
margin_bottom = 258.0
stretch_mode = 3

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer/Schließen"]
margin_left = 194.571
margin_top = 5.71429
margin_right = 330.571
margin_bottom = 32.7143
rect_scale = Vector2( 1.11429, 1.45715 )
text = "Schließen"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Level/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Level/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Level/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Schließen/Button2" to="." method="_on_Button2_pressed"]
