extends MarginContainer



func _on_Button2_pressed():
	get_tree().change_scene("res://MainMenu.tscn")


func _on_Level1_pressed():
	get_tree().change_scene("res://Level 1.tscn")


func _on_Level2_pressed():
	get_tree().change_scene("res://Level 2.tscn")


func _on_Level3_pressed():
	get_tree().change_scene("res://Level 3.tscn")
